force-app/main/default/objects/Account/fields/Services_Rendered__c.field-meta.xml
<CustomField>
    <fullName>Services_Rendered__c</fullName>
    <label>Services Rendered</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Preventive Care</fullName>
            </value>
            <value>
                <fullName>General Surgery</fullName>
            </value>
            <value>
                <fullName>Treatment Services</fullName>
            </value>
            <value>
                <fullName>Lab Services</fullName>
            </value>
            <value>
                <fullName>Imaging Services</fullName>
            </value>
            <value>
                <fullName>Dental Services</fullName>
            </value>
            <value>
                <fullName>Grooming Services</fullName>
            </value>
            <value>
                <fullName>Training Services</fullName>
            </value>
            <value>
                <fullName>Pharmacy on-site</fullName>
            </value>
            <value>
                <fullName>Online Pharmacy</fullName>
            </value>
            <value>
                <fullName>On-site Events Hosting</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>