force-app/main/default/objects/Account/fields/SiteId__c.field-meta.xml
<CustomField>
    <fullName>SiteId__c</fullName>
    <defaultValue>&quot;MAIN PAY&quot;</defaultValue>
    <label>Site Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>