force-app/main/default/objects/Account/fields/Subtype__c.field-meta.xml
<CustomField>
    <fullName>Subtype__c</fullName>
    <label>Subtype</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Corporate Account</fullName>
            </value>
            <value>
                <fullName>Independent</fullName>
            </value>
            <value>
                <fullName>Shelter/Non-Profit</fullName>
            </value>
            <value>
                <fullName>Buying Group</fullName>
            </value>
            <value>
                <fullName>Capital Partner/Investor</fullName>
            </value>
            <value>
                <fullName>PIMS</fullName>
            </value>
            <value>
                <fullName>Manufacturer</fullName>
            </value>
            <value>
                <fullName>Distributor</fullName>
            </value>
            <value>
                <fullName>National</fullName>
            </value>
            <value>
                <fullName>Regional</fullName>
            </value>
            <value>
                <fullName>University/College</fullName>
            </value>
            <value>
                <fullName>Shelter</fullName>
                <isActive>false</isActive>
                <label>Shelter</label>
            </value>
            <value>
                <fullName>Vendor</fullName>
                <isActive>false</isActive>
                <label>Vendor</label>
            </value>
            <value>
                <fullName>Vet Association</fullName>
                <isActive>false</isActive>
                <label>Vet Association</label>
            </value>
            <value>
                <fullName>Vet School</fullName>
                <isActive>false</isActive>
                <label>Vet School</label>
            </value>
            <value>
                <fullName>Veterinary Partner</fullName>
                <isActive>false</isActive>
                <label>Veterinary Partner</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>