force-app/main/default/objects/Account/fields/SupplierId__c.field-meta.xml
<CustomField>
    <fullName>SupplierId__c</fullName>
    <label>Supplier Id</label>
    <length>10</length>
    <type>Text</type>
</CustomField>