force-app/main/default/objects/Account/fields/Unique_Chewy_ID__c.field-meta.xml
<CustomField>
    <fullName>Unique_Chewy_ID__c</fullName>
    <externalId>true</externalId>
    <label>Unique Chewy ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>