force-app/main/default/objects/Account/fields/Vet_Diet_First_Fill__c.field-meta.xml
<CustomField>
    <fullName>Vet_Diet_First_Fill__c</fullName>
    <label>Vet Diet First Fill</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>