force-app/main/default/objects/Account/fields/Vet_Diet_Line_items_shipped__c.field-meta.xml
<CustomField>
    <fullName>Vet_Diet_Line_items_shipped__c</fullName>
    <label>Vet Diet Line items shipped</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>