force-app/main/default/objects/Account/fields/Vet_Diet_Number_of_Authorizations_approv__c.field-meta.xml
<CustomField>
    <fullName>Vet_Diet_Number_of_Authorizations_approv__c</fullName>
    <label>Vet Diet Number of Authorizations approv</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>