force-app/main/default/objects/Account/fields/Vet_Diet_Number_of_Authorizations_submit__c.field-meta.xml
<CustomField>
    <fullName>Vet_Diet_Number_of_Authorizations_submit__c</fullName>
    <label>Vet Diet Number of Authorizations submit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>