force-app/main/default/objects/Account/fields/Vet_Diet_Refills__c.field-meta.xml
<CustomField>
    <fullName>Vet_Diet_Refills__c</fullName>
    <label>Vet Diet Refills</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>