force-app/main/default/objects/Account/fields/Vet_Diet_Revenue_shipped__c.field-meta.xml
<CustomField>
    <fullName>Vet_Diet_Revenue_shipped__c</fullName>
    <label>Vet Diet Revenue shipped</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>