force-app/main/default/objects/Account/fields/Website_URL__c.field-meta.xml
<CustomField>
    <fullName>Website_URL__c</fullName>
    <inlineHelpText>Stores Practice Hub URL.
i.e. https://sandy-paws-animal-hospital.chewypro.com/</inlineHelpText>
    <label>Practice Hub URL</label>
    <type>Url</type>
</CustomField>