force-app/main/default/objects/Account/fields/Wellness_Program_Offered__c.field-meta.xml
<CustomField>
    <fullName>Wellness_Program_Offered__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Wellness Program Offered</label>
    <type>Checkbox</type>
</CustomField>