force-app/main/default/objects/Account/recordTypes/Delete.recordType-meta.xml
<RecordType>
    <fullName>Delete</fullName>
    <active>true</active>
    <label>Delete</label>
</RecordType>