force-app/main/default/objects/Account/recordTypes/VeterinaryPartner.recordType-meta.xml
<RecordType>
    <fullName>VeterinaryPartner</fullName>
    <active>true</active>
    <label>Veterinary Partner</label>
</RecordType>