force-app/main/default/objects/Account/validationRules/Prevent_Greater_Than_100_Service.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Greater_Than_100_Service</fullName>
    <active>true</active>
    <errorConditionFormula>IF(ServiceAllocated__c &gt; 1, TRUE, FALSE)</errorConditionFormula>
    <errorMessage>Service allocations exceed 100%</errorMessage>
</ValidationRule>