force-app/main/default/objects/Account/listViews/AllAccounts.listView-meta.xml
<ListView>
    <fullName>AllAccounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Parent_Company__c</columns>
    <columns>ACCOUNT.RECORDTYPE</columns>
    <columns>Onboarding_Id__c</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>ACCOUNT.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Accounts</label>
</ListView>