force-app/main/default/objects/Account/listViews/MyAccounts.listView-meta.xml
<ListView>
    <fullName>MyAccounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS2_STREET</columns>
    <columns>ACCOUNT.ADDRESS2_CITY</columns>
    <columns>ACCOUNT.ADDRESS2_STATE</columns>
    <columns>ACCOUNT.ADDRESS2_COUNTRY</columns>
    <columns>ACCOUNT.ADDRESS2_ZIP</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Customer_Tier__c</field>
        <operation>equals</operation>
        <value>Tier 1: Clinics 1-500,&quot;Tier 2: Clinics 501-5,000&quot;</value>
    </filters>
    <label>My Accounts</label>
</ListView>