force-app/main/default/objects/Account/listViews/Org_Account_Hierarchy.listView-meta.xml
<ListView>
    <fullName>Org_Account_Hierarchy</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Clinic_is_Live__c</columns>
    <columns>PIMS__c</columns>
    <columns>PrimaryContact__c</columns>
    <columns>Unique_Chewy_ID__c</columns>
    <filterScope>Everything</filterScope>
    <label>Org_Account_Hierarchy</label>
</ListView>